# hys_scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/hys_scraper/: __init__.py  __main__.py  hys_scraper.py
